// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GettingStarted: Introduction Css renders 1`] = `
<Fragment>
  <h2
    id="css"
  >
    CSS
  </h2>
  <p>
    Copy-paste the stylesheet 
    <CodeTags
      code="<link>"
      type="primary"
    />
     into your 
    <CodeTags
      code="<head>"
      type="primary"
    />
     before all other stylesheets to load our CSS.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <link
      href="https://design.TESTBRAND.com/TEST/styles/dg-style.css"
      rel="stylesheet"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`GettingStarted: Introduction GetStarted renders 1`] = `
<section>
  <p>
    Below we have compiled a list of things you need to have and know in order to get started with our design guide.
  </p>
  <div
    className="d-sm-flex"
  >
    <div
      className="col-sm-6 col-12"
    >
      <Link
        className="cards cards-primary"
        to="/"
      >
        <div
          className="cards-icon"
        >
          <i
            className="material-icons"
          >
            code
          </i>
        </div>
        <div
          className="cards-content"
        >
          <span
            className="h4"
          >
            For developers
          </span>
          <span>
            Learn more about how to setup and use our system.
          </span>
        </div>
        <i
          className="material-icons"
        >
          arrow_forward
        </i>
      </Link>
    </div>
    <div
      className="col-sm-6 col-12"
    >
      <Link
        className="cards cards-primary"
        to="/"
      >
        <div
          className="cards-icon"
        >
          <i
            className="material-icons"
          >
            brush
          </i>
        </div>
        <div
          className="cards-content"
        >
          <span
            className="h4"
          >
            For designers
          </span>
          <span>
            Get ready to use the Design Guide when designing in Swedbank Pay.
          </span>
        </div>
        <i
          className="material-icons"
        >
          arrow_forward
        </i>
      </Link>
    </div>
  </div>
</section>
`;

exports[`GettingStarted: Introduction JavaScript renders 1`] = `
<Fragment>
  <h2
    id="javascript"
  >
    JavaScript
  </h2>
  <p>
    Many of our components require the use of JavaScript to function. Place the following 
    <CodeTags
      code="<script>"
      type="primary"
    />
     tag near the end of your pages, right before the closing 
    <CodeTags
      code="</body>"
      type="primary"
    />
     tag, to enable them.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <script
      src="https://design.TESTBRAND.com/TEST/scripts/dg.js"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`GettingStarted: Introduction OpenSimpleCaring renders 1`] = `
<section>
  <h2>
    Open, simple, caring
  </h2>
  <p>
    Swedbank Pay is a sub-brand to Swedbank and a part of the “Coin family”. That means that Swedbank Pay is built on the same foundation as Swedbank and shares the same brand platform and overall guidelines. Swedbank Pay express its own identity through the logotype, yellow color, images and tonality.
  </p>
  <p>
    To build awareness we display Swedbank Pay’s name and logotype with impact. We express a distinguishing attitude through the logotype, yellow color, images and tonality – always as simple and uncomplicated as possible. Read more about the brand in the 
    <Link
      to="/core/identity"
    >
      Identity overview
    </Link>
    .
  </p>
  <img
    alt="Illustration of our vision, values and purpose"
    className="img-fluid"
    src="/TEST/img/documentation/introduction/pyramid.png"
  />
</section>
`;

exports[`GettingStarted: Introduction QuickStart renders 1`] = `
<Fragment>
  <h2
    id="quick-start"
  >
    Quick start
  </h2>
  <p>
    To quickly add the 
    TESTBRAND
     DesignGuide to your project, include the snippets below in your project.
  </p>
</Fragment>
`;

exports[`GettingStarted: Introduction UsingDG renders 1`] = `
<section>
  <h2>
    Using the Design Guide
  </h2>
  <p>
    Let’s clarify the definition of using the Design Guide. Just because an interface looks right according to the Design Guide, our brand and the design system in general it still doesn’t mean that it per definition “uses the Design Guide”. The definition of using our Design Guide is the technical implementation. 
  </p>
  <div
    className="quote"
  >
    <span>
      “
    </span>
    <p>
      The idea of the Design Guide is to have official place where general and/or major updates happens.
    </p>
  </div>
  <p>
    From a branding perspective we could easily settle with making everything look and feel cohesive. That is the ultimate goal! But what happens when we want to change and/or update a component, logotype, typeface e.t.c? The idea of the Design Guide is to have official place where general and/or major updates happens. If it just looks the same, the product won’t be updated when the Design Guide release new updates. 
  </p>
  <h3>
    Products using the Design Guide
  </h3>
  <p>
    Because there’s a difference of following the design guidelines and using the Design Guide, not all Swedbank Pay products per definition uses the Design Guide. 
  </p>
  <table
    className="table table-plain"
  >
    <thead>
      <tr>
        <th>
          Product
        </th>
        <th>
          Using Design Guide
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Checkout
        </td>
        <td>
          <i
            className="material-icons mr-3"
          >
            close
          </i>
           No, but are following the design guide
        </td>
      </tr>
      <tr>
        <td>
          Swedbankpay.se
        </td>
        <td>
          <i
            className="material-icons mr-3"
          >
            close
          </i>
           No
        </td>
      </tr>
      <tr>
        <td>
          Consumer Portal
        </td>
        <td>
          <i
            className="material-icons mr-3"
          >
            check
          </i>
           Yes
        </td>
      </tr>
      <tr>
        <td>
          Developer Portal
        </td>
        <td>
          <i
            className="material-icons mr-3"
          >
            check
          </i>
           Yes
        </td>
      </tr>
      <tr>
        <td>
          Card terminals
        </td>
        <td>
          <i
            className="material-icons mr-3"
          >
            close
          </i>
           No, but are following the design guide
        </td>
      </tr>
      <tr>
        <td>
          Ecom Merchant Admin
        </td>
        <td>
          <i
            className="material-icons mr-3"
          >
            check
          </i>
           Yes
        </td>
      </tr>
      <tr>
        <td>
          Ecom Owner Admin
        </td>
        <td>
          <i
            className="material-icons mr-3"
          >
            check
          </i>
           Yes
        </td>
      </tr>
      <tr>
        <td>
          Onboarding Signup
        </td>
        <td>
          <i
            className="material-icons mr-3"
          >
            check
          </i>
           Yes, is currently implementing the Design Guide
        </td>
      </tr>
    </tbody>
  </table>
</section>
`;

exports[`GettingStarted: Introduction WhatIsDG renders 1`] = `
<section>
  <h2>
    What is the Design Guide?
  </h2>
  <p>
    The Swedbank Pay design system consists of two parts; the Figma designs and the web Design Guide (where you are right now). The Design Guide is the ready-to-use part of the design system and the Figma design library is for designing and prototyping.
  </p>
  <p>
    The Design Guide consists of more than design. It contains all the parts of the design system that actually can be used and implemented by developers working with Swedbank Pay products.
  </p>
  <div
    className="quote"
  >
    <span>
      “
    </span>
    <p>
      A design system is the single source of truth which groups all the elements that will allow the teams to design, realize and develop a product.
    </p>
  </div>
</section>
`;

exports[`GettingStarted: Introduction renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Getting started with the 
    TESTBRAND
     DesignGuide.
  </p>
  <QuickStart />
  <Css />
  <JavaScript />
</DocContainer>
`;
